fix: min-width to vScrollbarFiller

--- a/src/styles/vsb.scss
+++ b/src/styles/vsb.scss
@@ -50,6 +50,7 @@
 
 .vScrollbarFiller {
   width: 100%;
+  min-width: 1px;
   //height: 10000000px;
   //background-color: red;
 }
